# SimulatedRobotics

./: readme.md
1_docker_gazebo/: CMakeLists.txt  Dockerfile.build  README.md  bowling.urdf  package.xml  spawnBowling.launch
2_keyboard_control_arm/: Dockerfile.build  README.md
2_keyboard_control_arm/keyboard_control_arm/: CMakeLists.txt  package.xml
2_keyboard_control_arm/keyboard_control_arm/config/: config.yaml
2_keyboard_control_arm/keyboard_control_arm/launch/: spawnBeamBalance.launch  spawnBeamController.launch
2_keyboard_control_arm/keyboard_control_arm/scripts/: auto_ball_control.py  ball_control.py  ball_spawner.py
2_keyboard_control_arm/keyboard_control_arm/urdf/: arm.urdf  beam_balance.urdf  sphere.urdf
3_ball_sorter_robot/: Dockerfile.build  README.md
3_ball_sorter_robot/ball_sorter_robot/: CMakeLists.txt  package.xml
3_ball_sorter_robot/ball_sorter_robot/config/: config.yaml
3_ball_sorter_robot/ball_sorter_robot/launch/: spawnBallSorter.launch  spawnSorterControl.launch
3_ball_sorter_robot/ball_sorter_robot/scripts/: ball_spawner.py  camera_system.py
3_ball_sorter_robot/ball_sorter_robot/urdf/: ball_world_camera.world  part_1.stl  part_2.stl  robot.urdf  sphere_blue.urdf  sphere_green.urdf
4_wheeled_robot_waypoint/: Dockerfile.build  README.md
5_cassie_robot/: Dockerfile.build  README.md
5_cassie_robot/cassie_gazebo/: CMakeLists.txt  README.md  package.xml
5_cassie_robot/cassie_gazebo/config/: cassie.yaml
5_cassie_robot/cassie_gazebo/launch/: cassie_control.launch  main.launch  pinned.launch  spawn_only.launch
(+5 files in other folders)
